--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	 <script type="text/javascript" src="./script.js">
 </script>
-             <div>"Welcome to the world of Web development"</div>
+             <div id="welcome to the world of web development">"Welcome to the world of Web development"</div>
 
 </body>
 
